--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="flower">
-    <div class="text-above">DE tu bbito Yuri H.</div>
+    <div class="text-above">De Yuri </div>
     <div class="mid">
     </div>
     <div class="Petal1 p1">
@@ -37,7 +37,7 @@
     </div>
     <div class="Petal3 p4">
     </div>
-    <div class="text-below">Para ti mi vida NAN </div>
+    <div class="text-below">Para ti Guina </div>
   </div>
 </body>
 </html>
